--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,9 +1,18 @@
+body{
+  font-family: sans-serif;
+}
+.description{
+  max-width: 30rem;
+  text-align: justify;
+  margin: auto;
+}
+
 .mainContainer {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 
-  max-width: 50vw;
+  max-width: 80vw;
   margin: auto;
 
   text-align: center;
@@ -11,25 +20,62 @@
 
 .listContainer {
   display: flex;
-  justify-content: space-around;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
 }
 
 .list {
   min-height: 40rem;
-  width: 40%;
+  min-width: 30rem;
+  
 
-  background-color: lightgray;
+  background-color: rgb(235, 235, 235);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   border-radius: 8px;
   padding: 1.5rem;
   box-sizing: border-box;
 }
-.youNotFollows-container {
+/* .youNotFollows-container {
 }
 
 .notFollowsYou-container {
-}
+} */
 
 .devImage{
-    width: 90%;
+    max-width: 10rem;
+    border-radius: 100%;
+}
+.user-info{
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  
+  
+  max-width: 30rem;
+  
+  gap: 2rem;
+}
+
+.user-name{
+  font-size: 1.4rem;
+  width: 10rem;
+}
+
+input[type="text"] {
+  font-size: 1.2rem; /* Increase font size */
+  padding: 0.5rem 1rem; /* Add padding for better spacing */
+  box-sizing: border-box; /* Ensure padding is included in the width */
+}
+
+button {
+  font-size: 1.2rem; /* Increase font size */
+  padding: 0.5rem 1rem; /* Add padding for better spacing */
+}
+
+
+@media (max-width: 800px){
+  .user-info{
+    flex-direction: column-reverse;
+  }
 }
